--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,23 +13,17 @@ h1 {
   font-weight: bold;
 }
 
-h2 a:link {
+h2 a:link, a:visited {
   font-size: 18px;
   color: white;
 }
 
 h3 {
-  font-size: 32px;
-  font-weight: bold;
-  font-family: Helvetica; sans-serif;
-}
-
-h4 {
   font-size: 23px;
   font-weight: bold;
   font-family: Helvetica; sans-serif;
 }
-h5 {
+h4 {
   font-size: 14px;
   font-family: Helvetica; sans-serif;
 }
@@ -40,4 +34,22 @@ h5 {
   font-size: 23px;
   font-weight: bold;
   color: white;
+}
+#process {
+  font-size: 32px;
+  font-weight: bold;
+  font-family: Helvetica; sans-serif;
+}
+#work, #team, #contact {
+  font-size: 23px;
+  font-weight: bold;
+  font-family: Helvetica; sans-serif;
+}
+
+.footer   {
+  background-color: dimgray;
+  font-family: Helvetica;
+  font-size: 11px;
+  color: white;
+  text-align: left !important;
 }
